# data-qaulity-ddl-compiler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pr-pipeline.yml
examples/dq-ddl-examples/: create-table-with-check-filter.sql  create-table-with-check.ddlx  create-table-with-check.sqlx  single-table.sql
src/: cli_arguments.rs  compiler.rs  main.rs  model.rs  parser.rs
src/compiler/: README.md  dqdl.rs  pydeequ.rs  pyspark_class.rs  test_strings.rs
src/compiler/test_strings/: pydeequ.rs  pyspark_class.rs
src/model/: README.md  column_rule.rs  data_class.lalrpop  data_class.rs  data_class_parsing.lalrpop  data_class_tests.rs  rule_ext_config.rs  rule_filter.rs  rule_traits.rs  table_expr.rs
src/model/rule_filter/: condition.rs  filter.rs  operator.rs
src/parser/: README.md  create_table.lalrpop  create_table_tests.rs  data_class_tests.rs  error_utils.rs  lines.rs  rule_filter_expr.lalrpop  rule_filter_tests.rs
templates/gen_pyspark/: data_class_sub.py
templates/pydeequ/: column_level_check.py
test_data/: test_lines.sqlx  test_lines_escaped_new_line.sqlx
valid_column_rule_derive/: Cargo.toml
valid_column_rule_derive/src/: lib.rs
