[package]
name = "data-qaulity-ddl-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
const_format = "0.2.32"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
rstest = "0.19.0"
tera = "1"
serde = { version = "1.0.201", features = ["derive"] }


